[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/clock.gd" type="Script" id=1]
[ext_resource path="res://images/clock.png" type="Texture" id=2]
[ext_resource path="res://images/pointer-hour.svg" type="Texture" id=3]
[ext_resource path="res://images/pointer-min.svg" type="Texture" id=4]
[ext_resource path="res://images/pointer-sec.svg" type="Texture" id=5]

[node name="clock" type="Node2D"]
position = Vector2( 392, 20 )
script = ExtResource( 1 )
pivot_hours_path = NodePath("pivot_hours")
pivot_minutes_path = NodePath("pivot_minutes")
pivot_seconds_path = NodePath("pivot_seconds")

[node name="body" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
centered = false

[node name="pivot_hours" type="Position2D" parent="."]
editor/display_folded = true
position = Vector2( 150, 150 )

[node name="arm_hours" type="Sprite" parent="pivot_hours"]
position = Vector2( -8, -39.85 )
scale = Vector2( 1, 0.71145 )
texture = ExtResource( 3 )
centered = false

[node name="pivot_minutes" type="Position2D" parent="."]
editor/display_folded = true
position = Vector2( 150, 150 )

[node name="arm_minutes" type="Sprite" parent="pivot_minutes"]
position = Vector2( -8, -96 )
texture = ExtResource( 4 )
centered = false

[node name="pivot_seconds" type="Position2D" parent="."]
position = Vector2( 150, 150 )

[node name="arm_seconds" type="Sprite" parent="pivot_seconds"]
position = Vector2( -1, -99 )
texture = ExtResource( 5 )
centered = false
